crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_single_quote_escape_mac_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(MAC_EOL)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "text \\\r more text",
        ),
        2..19,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        19..20,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        20..20,
    ),
]
```
