crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_single_quote_escape_unix_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(UNIX_EOL)
---
[
    (
        FStringStart,
        0..2,
    ),
    (
        FStringMiddle {
            value: "text \\\n more text",
            is_raw: false,
        },
        2..19,
    ),
    (
        FStringEnd,
        19..20,
    ),
    (
        Newline,
        20..20,
    ),
]
