crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_with_ipy_escape_command.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart,
        0..2,
    ),
    (
        FStringMiddle {
            value: "foo ",
            is_raw: false,
        },
        2..6,
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        Exclamation,
        7..8,
    ),
    (
        Name {
            name: "pwd",
        },
        8..11,
    ),
    (
        Rbrace,
        11..12,
    ),
    (
        FStringMiddle {
            value: " bar",
            is_raw: false,
        },
        12..16,
    ),
    (
        FStringEnd,
        16..17,
    ),
    (
        Newline,
        17..17,
    ),
]
